--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>HRRB Twittler</title>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
   <body>
     <div class="header"></div>
     <div class="content">
+      <button id="newTweets" onclick="timeline.display(timeline.currentUser)">Get New Tweets</button>
       <div id="timeline"></div>
     </div>
     <div class="footer"></div>
@@ -26,16 +28,31 @@
           user = user || 'all'; //set a default of 'all' for user
           if(timeline.currentUser !== user){ // if changing users, reset index
             timeline.index = 0;
+            console.log('reset index');
           }
           timeline.currentUser = user; // store the current user being displayed
           timeline.getTweets(timeline.currentUser); // get tweets for requested user
           var $timeline = $('#timeline');
           var tweetCount = timeline.tweets.length -1;
+          console.log('user is ' + timeline.currentUser);
           console.log('index is ' + timeline.index);
-          while(timeline.index <= tweetCount){ // add new tweets in reverse chronological order
+          while(timeline.index <= tweetCount){ // build new tweets in reverse chronological order
             var tweet = timeline.tweets[timeline.index];
-            var $tweet = $('<div class="tweet"></div>');
-            $tweet.text(tweet.created_at + '| @' + tweet.user + ': ' + tweet.message);
+            var $tweet = $('<div></div>');
+            $tweet.addClass('tweet');
+            var $user = $('<a></a>');
+            $user.addClass('user');
+            $user.attr('id',tweet.user);
+            $user.text('@' + tweet.user + ' ');
+            var $message = $('<p></p>');
+            $message.addClass('message');
+            $message.text(tweet.message);
+            var $timestamp = $('<p></p>');
+            $timestamp.addClass('timestamp');
+            $timestamp.text(tweet.created_at);
+            $user.appendTo($tweet);
+            $message.appendTo($tweet);
+            $timestamp.appendTo($tweet);
             $tweet.prependTo($timeline);
             timeline.index += 1;
           }
@@ -49,8 +66,16 @@
         },
       };
 
-      var currentdate = new Date();
-      var timestamp = currentdate.getMonth() + "/" + currentdate.getDay() + " | " + currentdate.getHours() + ":" + currentdate.getMinutes();
+      timeline.display(timeline.currentUser); // load inital tweets
+
+      $('.user').click(function(){ // when user is clicked dispaly their timeline
+        console.log('clicked');
+        $('#timeline').replaceWith(timeline.display($(this).attr("id")));
+      });
+
+
+      // var currentdate = new Date();
+      // var timestamp = currentdate.getMonth() + "/" + currentdate.getDay() + " | " + currentdate.getHours() + ":" + currentdate.getMinutes();
 
       // $(document).ready(function(){
       //   var $body = $('body');
