--- a/index.html
+++ b/index.html
@@ -27,19 +27,15 @@
           }
         },
         display : function(user){
-          console.log('display called with user ' + user);
           user = user || 'all'; //set a default of 'all' for user
           if(timeline.currentUser !== user){ // if changing users, reset index
             timeline.index = 0;
-            $('#timeline').empty();
-            console.log('reset index');
+            $('#timeline').empty(); // clear previous tweets when changing users
           }
           timeline.currentUser = user; // store the current user being displayed
           timeline.getTweets(timeline.currentUser); // get tweets for requested user
           var $timeline = $('#timeline');
           var tweetCount = timeline.tweets.length -1;
-          console.log('user is ' + timeline.currentUser);
-          console.log('index is ' + timeline.index);
           while(timeline.index <= tweetCount){ // build new tweets in reverse chronological order
             var tweet = timeline.tweets[timeline.index];
             var $tweet = $('<div></div>');
@@ -61,44 +57,18 @@
             timeline.index += 1;
           }
           index = tweetCount +1; // store index for next call
-        },
-        reset : function(){ // reset timeline and reload page
-          timeline.index = 0;
-          timeline.currentUser = 'all';
-          $('#timeline').html('');
-          window.location.reload();
-        },
+        }
       };
 
-      timeline.display(timeline.currentUser); // load inital tweets
-
-      // when user is clicked, display their timeline
+       // when user is clicked, display their timeline
       $('#timeline').on("click", ".user", function(){ // use delegated events so newly added tweets will trigger handler
-        console.log('clicked');
         var clicked = $(this).attr('class').replace(/( user)/, '');
-        console.log(clicked);
         timeline.display(clicked);
       });
 
-
-      // var currentdate = new Date();
-      // var timestamp = currentdate.getMonth() + "/" + currentdate.getDay() + " | " + currentdate.getHours() + ":" + currentdate.getMinutes();
-
-      // $(document).ready(function(){
-      //   var $body = $('body');
-      //   $body.html('');
-
-      //   var index = streams.home.length - 1;
-      //   while(index >= 0){
-      //     var tweet = streams.home[index];
-      //     var $tweet = $('<div></div>');
-      //     $tweet.text(timestamp + ' @' + tweet.user + ': ' + tweet.message);
-      //     $tweet.appendTo($body);
-      //     index -= 1;
-      //   }
-
-      // });
-
+      $(document).ready(function(){
+        timeline.display(timeline.currentUser); // load inital tweets
+      });
     </script>
   </body>
 </html>
